Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -71,8 +71,8 @@ Room 412 &
 %------------------------------------------------
 % Primary areas of research interest
 \section*{Areas of specialization}
-Social Network Analysis; Sociology of Health and Illness; Race and Ethnicity;  \\
-Computational Social Science; Quantitative Methods
+Computational Social Science; Social Network Analysis; \\
+Sociology of Health and Illness; Race and Ethnicity; Big Data
 
 
 %---------------------------------------------------------------------------------
